infra/kubernetes/istio-hub/virtualservice-blog.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: blog
  namespace: istio-ingress
spec:
  hosts:
    - "blog.chrishouse.io"
  gateways:
    - main-gateway
  http:
    - route:
        - destination:
            host: spoke.internal
            port:
              number: 80
      headers:
        request:
          set:
            Host: blog.chrishouse.io
