infra/kubernetes/istio-hub/virtualservice-pricing-api-prod.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: pricing-api-prod-vs
  namespace: istio-ingress
  labels:
    team: red
    environment: prod
    created-by: backstage
spec:
  hosts:
    - "pricing-api-prod.chrishouse.io"
  gateways:
    - main-gateway
  http:
    - route:
        - destination:
            # Route to spoke cluster via ServiceEntry
            host: spoke.internal
            port:
              number: 80
          headers:
            request:
              set:
                Host: pricing-api-prod.chrishouse.io
